hw2/y.output
Terminals which are not used

   LONG_CONST
   UNSIGNED_LONG_CONST


Grammar

    0 $accept: root $end

    1 root: translation_unit

    2 translation_unit: top_level_decl
    3                 | translation_unit top_level_decl

    4 top_level_decl: decl
    5               | function_definition

    6 decl: declaration_specifiers initialized_declarator_list SEMICOLON

    7 function_definition: function_def_specifier compound_statement

    8 compound_statement: LEFT_CURLY_BRACE declaration_or_statement_list RIGHT_CURLY_BRACE
    9                   | LEFT_CURLY_BRACE RIGHT_CURLY_BRACE

   10 declaration_or_statement_list: declaration_or_statement
   11                              | declaration_or_statement_list declaration_or_statement

   12 declaration_or_statement: decl
   13                         | statement

   14 statement: expression_statement
   15          | labeled_statement
   16          | compound_statement
   17          | conditional_statement
   18          | iterative_statement
   19          | break_statement
   20          | continue_statement
   21          | return_statement
   22          | goto_statement
   23          | null_statement
   24          | error SEMICOLON

   25 labeled_statement: label COLON statement

   26 expression_statement: expr SEMICOLON

   27 conditional_statement: if_statement
   28                      | if_else_statement

   29 iterative_statement: while_statement
   30                    | do_statement
   31                    | for_statement

   32 break_statement: BREAK SEMICOLON

   33 continue_statement: CONTINUE SEMICOLON

   34 return_statement: RETURN expr SEMICOLON
   35                 | RETURN SEMICOLON

   36 goto_statement: GOTO named_label SEMICOLON

   37 named_label: IDENTIFIER

   38 null_statement: SEMICOLON

   39 label: named_label

   40 if_else_statement: IF LEFT_PAREN expr RIGHT_PAREN statement ELSE statement

   41 if_statement: IF LEFT_PAREN expr RIGHT_PAREN statement

   42 while_statement: WHILE LEFT_PAREN expr RIGHT_PAREN statement

   43 do_statement: DO statement WHILE LEFT_PAREN expr RIGHT_PAREN SEMICOLON

   44 for_statement: FOR for_expr statement

   45 for_expr: LEFT_PAREN initial_clause SEMICOLON expr SEMICOLON expr RIGHT_PAREN
   46         | LEFT_PAREN SEMICOLON expr SEMICOLON expr RIGHT_PAREN
   47         | LEFT_PAREN initial_clause SEMICOLON SEMICOLON expr RIGHT_PAREN
   48         | LEFT_PAREN initial_clause SEMICOLON expr SEMICOLON RIGHT_PAREN
   49         | LEFT_PAREN initial_clause SEMICOLON SEMICOLON RIGHT_PAREN
   50         | LEFT_PAREN SEMICOLON expr SEMICOLON RIGHT_PAREN
   51         | LEFT_PAREN SEMICOLON SEMICOLON expr RIGHT_PAREN
   52         | LEFT_PAREN SEMICOLON SEMICOLON RIGHT_PAREN

   53 initial_clause: expr
   54               | decl

   55 function_def_specifier: declaration_specifiers declarator
   56                       | declarator

   57 initialized_declarator: declarator

   58 declarator: pointer_decl
   59           | direct_declarator

   60 pointer: STAR
   61        | STAR pointer

   62 pointer_decl: pointer direct_declarator

   63 direct_declarator: simple_declarator
   64                  | LEFT_PAREN declarator RIGHT_PAREN
   65                  | function_declarator
   66                  | array_declarator

   67 simple_declarator: IDENTIFIER

   68 function_declarator: direct_declarator LEFT_PAREN parameter_type_list RIGHT_PAREN

   69 parameter_decl: declaration_specifiers declarator
   70               | declaration_specifiers abstract_declarator
   71               | declaration_specifiers

   72 abstract_declarator: pointer
   73                    | pointer direct_abstract_declarator
   74                    | direct_abstract_declarator

   75 direct_abstract_declarator: LEFT_PAREN abstract_declarator RIGHT_PAREN
   76                           | direct_abstract_declarator LEFT_BRACKET constant_expr RIGHT_BRACKET
   77                           | LEFT_BRACKET constant_expr RIGHT_BRACKET
   78                           | direct_abstract_declarator LEFT_BRACKET RIGHT_BRACKET
   79                           | direct_abstract_declarator LEFT_PAREN parameter_type_list RIGHT_PAREN
   80                           | LEFT_PAREN parameter_type_list RIGHT_PAREN
   81                           | direct_abstract_declarator LEFT_PAREN RIGHT_PAREN

   82 constant_expr: conditional_expr

   83 parameter_list: parameter_decl
   84               | parameter_list COMMA parameter_decl

   85 parameter_type_list: parameter_list

   86 array_declarator: direct_declarator LEFT_BRACKET constant_expr RIGHT_BRACKET
   87                 | direct_declarator LEFT_BRACKET RIGHT_BRACKET

   88 initialized_declarator_list: initialized_declarator
   89                            | initialized_declarator_list COMMA initialized_declarator

   90 expression_list: assignment_expr
   91                | expression_list COMMA assignment_expr

   92 expr: comma_expr

   93 comma_expr: assignment_expr
   94           | comma_expr COMMA assignment_expr

   95 assignment_expr: conditional_expr
   96                | unary_expr assignment_op assignment_expr

   97 assignment_op: ASSIGN
   98              | ADD_AND_ASSIGN
   99              | SUBTRACT_AND_ASSIGN
  100              | MULTIPLY_AND_ASSIGN
  101              | DIVIDE_AND_ASSIGN
  102              | REMAINDER_AND_ASSIGN
  103              | BITSHIFT_LEFT_AND_ASSIGN
  104              | BITSHIFT_RIGHT_AND_ASSIGN
  105              | BITWISE_AND_AND_ASSIGN
  106              | BITWISE_OR_AND_ASSIGN
  107              | BITWISE_XOR_AND_ASSIGN

  108 conditional_expr: logical_or_expr
  109                 | logical_or_expr QUESTION_MARK expr COLON conditional_expr

  110 logical_or_expr: logical_and_expr
  111                | logical_or_expr LOGICAL_OR logical_and_expr

  112 logical_and_expr: bitwise_or_expr
  113                 | logical_and_expr LOGICAL_AND bitwise_or_expr

  114 bitwise_and_expr: equality_expr
  115                 | bitwise_and_expr AMPERSAND equality_expr

  116 equality_expr: relational_expr
  117              | equality_expr equality_op relational_expr

  118 equality_op: IS_EQUAL
  119            | IS_NOT_EQUAL

  120 relational_expr: shift_expr
  121                | relational_expr relational_op shift_expr

  122 relational_op: LESS_THAN
  123              | LESS_THAN_OR_EQUAL
  124              | GREATER_THAN
  125              | GREATER_THAN_OR_EQUAL

  126 shift_expr: additive_expr
  127           | shift_expr shift_op additive_expr

  128 shift_op: BITSHIFT_RIGHT
  129         | BITSHIFT_LEFT

  130 additive_expr: multiplicative_expr
  131              | additive_expr add_op multiplicative_expr

  132 add_op: PLUS
  133       | DASH

  134 multiplicative_expr: cast_expr
  135                    | multiplicative_expr mult_op cast_expr

  136 mult_op: STAR
  137        | SLASH
  138        | REMAINDER

  139 cast_expr: unary_expr
  140          | LEFT_PAREN type_name RIGHT_PAREN cast_expr

  141 type_name: declaration_specifiers abstract_declarator
  142          | declaration_specifiers

  143 declaration_specifiers: type_specifier

  144 type_specifier: integer_type_specifier
  145               | void_type_specifier

  146 integer_type_specifier: signed_type_specifier
  147                       | unsigned_type_specifier
  148                       | character_type_specifier

  149 signed_type_specifier: SHORT
  150                      | SHORT INT
  151                      | SIGNED SHORT
  152                      | SIGNED SHORT INT
  153                      | INT
  154                      | SIGNED INT
  155                      | SIGNED
  156                      | LONG
  157                      | LONG INT
  158                      | SIGNED LONG
  159                      | SIGNED LONG INT

  160 character_type_specifier: CHAR
  161                         | SIGNED CHAR
  162                         | UNSIGNED CHAR

  163 bitwise_or_expr: bitwise_xor_expr
  164                | bitwise_or_expr BITWISE_OR bitwise_xor_expr

  165 bitwise_xor_expr: bitwise_and_expr
  166                 | bitwise_xor_expr BITWISE_XOR bitwise_and_expr

  167 unary_expr: postfix_expr
  168           | unary_minus_expr
  169           | unary_plus_expr
  170           | logical_negation_expr
  171           | bitwise_negation_expr
  172           | address_expr
  173           | indirection_expr
  174           | preincrement_expr
  175           | predecrement_expr

  176 unary_minus_expr: DASH cast_expr

  177 unary_plus_expr: PLUS cast_expr

  178 logical_negation_expr: LOGICAL_NOT cast_expr

  179 bitwise_negation_expr: BITWISE_COMPLEMENT cast_expr

  180 address_expr: AMPERSAND cast_expr

  181 indirection_expr: STAR cast_expr

  182 postfix_expr: primary_expr
  183             | subscript_expr
  184             | function_call
  185             | postincrement_expr
  186             | postdecrement_expr

  187 primary_expr: IDENTIFIER
  188             | STRING_CONST
  189             | INTEGER_CONST
  190             | parenthesized_expr

  191 parenthesized_expr: LEFT_PAREN expr RIGHT_PAREN

  192 subscript_expr: postfix_expr LEFT_BRACKET expr RIGHT_BRACKET

  193 predecrement_expr: DECREMENT unary_expr

  194 preincrement_expr: INCREMENT unary_expr

  195 function_call: postfix_expr LEFT_PAREN expression_list RIGHT_PAREN
  196              | postfix_expr LEFT_PAREN RIGHT_PAREN

  197 postdecrement_expr: postfix_expr DECREMENT

  198 postincrement_expr: postfix_expr INCREMENT

  199 unsigned_type_specifier: UNSIGNED SHORT INT
  200                        | UNSIGNED INT
  201                        | UNSIGNED LONG INT

  202 void_type_specifier: VOID


Terminals, with rules where they appear

$end (0) 0
error (256) 24
DO (258) 43
FOR (259) 44
RETURN (260) 34 35
BREAK (261) 32
SHORT (262) 149 150 151 152 199
ELSE (263) 40
GOTO (264) 36
SIGNED (265) 151 152 154 155 158 159 161
UNSIGNED (266) 162 199 200 201
CHAR (267) 160 161 162
IF (268) 40 41
VOID (269) 202
INT (270) 150 152 153 154 157 159 199 200 201
CONTINUE (271) 33
LONG (272) 156 157 158 159 201
WHILE (273) 42 43
IDENTIFIER (274) 37 67 187
STRING_CONST (275) 188
INTEGER_CONST (276) 189
LONG_CONST (277)
UNSIGNED_LONG_CONST (278)
LEFT_CURLY_BRACE (279) 8 9
RIGHT_CURLY_BRACE (280) 8 9
COMMA (281) 84 89 91 94
SEMICOLON (282) 6 24 26 32 33 34 35 36 38 43 45 46 47 48 49 50 51 52
COLON (283) 25 109
LEFT_BRACKET (284) 76 77 78 86 87 192
RIGHT_BRACKET (285) 76 77 78 86 87 192
LEFT_PAREN (286) 40 41 42 43 45 46 47 48 49 50 51 52 64 68 75 79 80
    81 140 191 195 196
RIGHT_PAREN (287) 40 41 42 43 45 46 47 48 49 50 51 52 64 68 75 79 80
    81 140 191 195 196
INCREMENT (288) 194 198
DECREMENT (289) 193 197
BITWISE_COMPLEMENT (290) 179
LOGICAL_NOT (291) 178
PLUS (292) 132 177
DASH (293) 133 176
AMPERSAND (294) 115 180
STAR (295) 60 61 136 181
SLASH (296) 137
REMAINDER (297) 138
BITSHIFT_LEFT (298) 129
BITSHIFT_RIGHT (299) 128
LESS_THAN (300) 122
GREATER_THAN (301) 124
LESS_THAN_OR_EQUAL (302) 123
GREATER_THAN_OR_EQUAL (303) 125
IS_EQUAL (304) 118
IS_NOT_EQUAL (305) 119
BITWISE_XOR (306) 166
BITWISE_OR (307) 164
LOGICAL_AND (308) 113
LOGICAL_OR (309) 111
QUESTION_MARK (310) 109
ASSIGN (311) 97
ADD_AND_ASSIGN (312) 98
SUBTRACT_AND_ASSIGN (313) 99
MULTIPLY_AND_ASSIGN (314) 100
DIVIDE_AND_ASSIGN (315) 101
REMAINDER_AND_ASSIGN (316) 102
BITWISE_AND_AND_ASSIGN (317) 105
BITWISE_OR_AND_ASSIGN (318) 106
BITWISE_XOR_AND_ASSIGN (319) 107
BITSHIFT_LEFT_AND_ASSIGN (320) 103
BITSHIFT_RIGHT_AND_ASSIGN (321) 104


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
root (68)
    on left: 1, on right: 0
translation_unit (69)
    on left: 2 3, on right: 1 3
top_level_decl (70)
    on left: 4 5, on right: 2 3
decl (71)
    on left: 6, on right: 4 12 54
function_definition (72)
    on left: 7, on right: 5
compound_statement (73)
    on left: 8 9, on right: 7 16
declaration_or_statement_list (74)
    on left: 10 11, on right: 8 11
declaration_or_statement (75)
    on left: 12 13, on right: 10 11
statement (76)
    on left: 14 15 16 17 18 19 20 21 22 23 24, on right: 13 25 40 41
    42 43 44
labeled_statement (77)
    on left: 25, on right: 15
expression_statement (78)
    on left: 26, on right: 14
conditional_statement (79)
    on left: 27 28, on right: 17
iterative_statement (80)
    on left: 29 30 31, on right: 18
break_statement (81)
    on left: 32, on right: 19
continue_statement (82)
    on left: 33, on right: 20
return_statement (83)
    on left: 34 35, on right: 21
goto_statement (84)
    on left: 36, on right: 22
named_label (85)
    on left: 37, on right: 36 39
null_statement (86)
    on left: 38, on right: 23
label (87)
    on left: 39, on right: 25
if_else_statement (88)
    on left: 40, on right: 28
if_statement (89)
    on left: 41, on right: 27
while_statement (90)
    on left: 42, on right: 29
do_statement (91)
    on left: 43, on right: 30
for_statement (92)
    on left: 44, on right: 31
for_expr (93)
    on left: 45 46 47 48 49 50 51 52, on right: 44
initial_clause (94)
    on left: 53 54, on right: 45 47 48 49
function_def_specifier (95)
    on left: 55 56, on right: 7
initialized_declarator (96)
    on left: 57, on right: 88 89
declarator (97)
    on left: 58 59, on right: 55 56 57 64 69
pointer (98)
    on left: 60 61, on right: 61 62 72 73
pointer_decl (99)
    on left: 62, on right: 58
direct_declarator (100)
    on left: 63 64 65 66, on right: 59 62 68 86 87
simple_declarator (101)
    on left: 67, on right: 63
function_declarator (102)
    on left: 68, on right: 65
parameter_decl (103)
    on left: 69 70 71, on right: 83 84
abstract_declarator (104)
    on left: 72 73 74, on right: 70 75 141
direct_abstract_declarator (105)
    on left: 75 76 77 78 79 80 81, on right: 73 74 76 78 79 81
constant_expr (106)
    on left: 82, on right: 76 77 86
parameter_list (107)
    on left: 83 84, on right: 84 85
parameter_type_list (108)
    on left: 85, on right: 68 79 80
array_declarator (109)
    on left: 86 87, on right: 66
initialized_declarator_list (110)
    on left: 88 89, on right: 6 89
expression_list (111)
    on left: 90 91, on right: 91 195
expr (112)
    on left: 92, on right: 26 34 40 41 42 43 45 46 47 48 50 51 53 109
    191 192
comma_expr (113)
    on left: 93 94, on right: 92 94
assignment_expr (114)
    on left: 95 96, on right: 90 91 93 94 96
assignment_op (115)
    on left: 97 98 99 100 101 102 103 104 105 106 107,
    on right: 96
conditional_expr (116)
    on left: 108 109, on right: 82 95 109
logical_or_expr (117)
    on left: 110 111, on right: 108 109 111
logical_and_expr (118)
    on left: 112 113, on right: 110 111 113
bitwise_and_expr (119)
    on left: 114 115, on right: 115 165 166
equality_expr (120)
    on left: 116 117, on right: 114 115 117
equality_op (121)
    on left: 118 119, on right: 117
relational_expr (122)
    on left: 120 121, on right: 116 117 121
relational_op (123)
    on left: 122 123 124 125, on right: 121
shift_expr (124)
    on left: 126 127, on right: 120 121 127
shift_op (125)
    on left: 128 129, on right: 127
additive_expr (126)
    on left: 130 131, on right: 126 127 131
add_op (127)
    on left: 132 133, on right: 131
multiplicative_expr (128)
    on left: 134 135, on right: 130 131 135
mult_op (129)
    on left: 136 137 138, on right: 135
cast_expr (130)
    on left: 139 140, on right: 134 135 140 176 177 178 179 180 181
type_name (131)
    on left: 141 142, on right: 140
declaration_specifiers (132)
    on left: 143, on right: 6 55 69 70 71 141 142
type_specifier (133)
    on left: 144 145, on right: 143
integer_type_specifier (134)
    on left: 146 147 148, on right: 144
signed_type_specifier (135)
    on left: 149 150 151 152 153 154 155 156 157 158 159,
    on right: 146
character_type_specifier (136)
    on left: 160 161 162, on right: 148
bitwise_or_expr (137)
    on left: 163 164, on right: 112 113 164
bitwise_xor_expr (138)
    on left: 165 166, on right: 163 164 166
unary_expr (139)
    on left: 167 168 169 170 171 172 173 174 175, on right: 96 139
    193 194
unary_minus_expr (140)
    on left: 176, on right: 168
unary_plus_expr (141)
    on left: 177, on right: 169
logical_negation_expr (142)
    on left: 178, on right: 170
bitwise_negation_expr (143)
    on left: 179, on right: 171
address_expr (144)
    on left: 180, on right: 172
indirection_expr (145)
    on left: 181, on right: 173
postfix_expr (146)
    on left: 182 183 184 185 186, on right: 167 192 195 196 197 198
primary_expr (147)
    on left: 187 188 189 190, on right: 182
parenthesized_expr (148)
    on left: 191, on right: 190
subscript_expr (149)
    on left: 192, on right: 183
predecrement_expr (150)
    on left: 193, on right: 175
preincrement_expr (151)
    on left: 194, on right: 174
function_call (152)
    on left: 195 196, on right: 184
postdecrement_expr (153)
    on left: 197, on right: 186
postincrement_expr (154)
    on left: 198, on right: 185
unsigned_type_specifier (155)
    on left: 199 200 201, on right: 147
void_type_specifier (156)
    on left: 202, on right: 145


state 0

    0 $accept: . root $end

    SHORT       shift, and go to state 1
    SIGNED      shift, and go to state 2
    UNSIGNED    shift, and go to state 3
    CHAR        shift, and go to state 4
    VOID        shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    LEFT_PAREN  shift, and go to state 9
    STAR        shift, and go to state 10

    root                      go to state 11
    translation_unit          go to state 12
    top_level_decl            go to state 13
    decl                      go to state 14
    function_definition       go to state 15
    function_def_specifier    go to state 16
    declarator                go to state 17
    pointer                   go to state 18
    pointer_decl              go to state 19
    direct_declarator         go to state 20
    simple_declarator         go to state 21
    function_declarator       go to state 22
    array_declarator          go to state 23
    declaration_specifiers    go to state 24
    type_specifier            go to state 25
    integer_type_specifier    go to state 26
    signed_type_specifier     go to state 27
    character_type_specifier  go to state 28
    unsigned_type_specifier   go to state 29
    void_type_specifier       go to state 30


state 1

  149 signed_type_specifier: SHORT .
  150                      | SHORT . INT

    INT  shift, and go to state 31

    $default  reduce using rule 149 (signed_type_specifier)


state 2

  151 signed_type_specifier: SIGNED . SHORT
  152                      | SIGNED . SHORT INT
  154                      | SIGNED . INT
  155                      | SIGNED .
  158                      | SIGNED . LONG
  159                      | SIGNED . LONG INT
  161 character_type_specifier: SIGNED . CHAR

    SHORT  shift, and go to state 32
    CHAR   shift, and go to state 33
    INT    shift, and go to state 34
    LONG   shift, and go to state 35

    $default  reduce using rule 155 (signed_type_specifier)


state 3

  162 character_type_specifier: UNSIGNED . CHAR
  199 unsigned_type_specifier: UNSIGNED . SHORT INT
  200                        | UNSIGNED . INT
  201                        | UNSIGNED . LONG INT

    SHORT  shift, and go to state 36
    CHAR   shift, and go to state 37
    INT    shift, and go to state 38
    LONG   shift, and go to state 39


state 4

  160 character_type_specifier: CHAR .

    $default  reduce using rule 160 (character_type_specifier)


state 5

  202 void_type_specifier: VOID .

    $default  reduce using rule 202 (void_type_specifier)


state 6

  153 signed_type_specifier: INT .

    $default  reduce using rule 153 (signed_type_specifier)


state 7

  156 signed_type_specifier: LONG .
  157                      | LONG . INT

    INT  shift, and go to state 40

    $default  reduce using rule 156 (signed_type_specifier)


state 8

   67 simple_declarator: IDENTIFIER .

    $default  reduce using rule 67 (simple_declarator)


state 9

   64 direct_declarator: LEFT_PAREN . declarator RIGHT_PAREN

    IDENTIFIER  shift, and go to state 8
    LEFT_PAREN  shift, and go to state 9
    STAR        shift, and go to state 10

    declarator           go to state 41
    pointer              go to state 18
    pointer_decl         go to state 19
    direct_declarator    go to state 20
    simple_declarator    go to state 21
    function_declarator  go to state 22
    array_declarator     go to state 23


state 10

   60 pointer: STAR .
   61        | STAR . pointer

    STAR  shift, and go to state 10

    $default  reduce using rule 60 (pointer)

    pointer  go to state 42


state 11

    0 $accept: root . $end

    $end  shift, and go to state 43


state 12

    1 root: translation_unit .
    3 translation_unit: translation_unit . top_level_decl

    SHORT       shift, and go to state 1
    SIGNED      shift, and go to state 2
    UNSIGNED    shift, and go to state 3
    CHAR        shift, and go to state 4
    VOID        shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    LEFT_PAREN  shift, and go to state 9
    STAR        shift, and go to state 10

    $default  reduce using rule 1 (root)

    top_level_decl            go to state 44
    decl                      go to state 14
    function_definition       go to state 15
    function_def_specifier    go to state 16
    declarator                go to state 17
    pointer                   go to state 18
    pointer_decl              go to state 19
    direct_declarator         go to state 20
    simple_declarator         go to state 21
    function_declarator       go to state 22
    array_declarator          go to state 23
    declaration_specifiers    go to state 24
    type_specifier            go to state 25
    integer_type_specifier    go to state 26
    signed_type_specifier     go to state 27
    character_type_specifier  go to state 28
    unsigned_type_specifier   go to state 29
    void_type_specifier       go to state 30


state 13

    2 translation_unit: top_level_decl .

    $default  reduce using rule 2 (translation_unit)


state 14

    4 top_level_decl: decl .

    $default  reduce using rule 4 (top_level_decl)


state 15

    5 top_level_decl: function_definition .

    $default  reduce using rule 5 (top_level_decl)


state 16

    7 function_definition: function_def_specifier . compound_statement

    LEFT_CURLY_BRACE  shift, and go to state 45

    compound_statement  go to state 46


state 17

   56 function_def_specifier: declarator .

    $default  reduce using rule 56 (function_def_specifier)


state 18

   62 pointer_decl: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 8
    LEFT_PAREN  shift, and go to state 9

    direct_declarator    go to state 47
    simple_declarator    go to state 21
    function_declarator  go to state 22
    array_declarator     go to state 23


state 19

   58 declarator: pointer_decl .

    $default  reduce using rule 58 (declarator)


state 20

   59 declarator: direct_declarator .
   68 function_declarator: direct_declarator . LEFT_PAREN parameter_type_list RIGHT_PAREN
   86 array_declarator: direct_declarator . LEFT_BRACKET constant_expr RIGHT_BRACKET
   87                 | direct_declarator . LEFT_BRACKET RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 48
    LEFT_PAREN    shift, and go to state 49

    $default  reduce using rule 59 (declarator)


state 21

   63 direct_declarator: simple_declarator .

    $default  reduce using rule 63 (direct_declarator)


state 22

   65 direct_declarator: function_declarator .

    $default  reduce using rule 65 (direct_declarator)


state 23

   66 direct_declarator: array_declarator .

    $default  reduce using rule 66 (direct_declarator)


state 24

    6 decl: declaration_specifiers . initialized_declarator_list SEMICOLON
   55 function_def_specifier: declaration_specifiers . declarator

    IDENTIFIER  shift, and go to state 8
    LEFT_PAREN  shift, and go to state 9
    STAR        shift, and go to state 10

    initialized_declarator       go to state 50
    declarator                   go to state 51
    pointer                      go to state 18
    pointer_decl                 go to state 19
    direct_declarator            go to state 20
    simple_declarator            go to state 21
    function_declarator          go to state 22
    array_declarator             go to state 23
    initialized_declarator_list  go to state 52


state 25

  143 declaration_specifiers: type_specifier .

    $default  reduce using rule 143 (declaration_specifiers)


state 26

  144 type_specifier: integer_type_specifier .

    $default  reduce using rule 144 (type_specifier)


state 27

  146 integer_type_specifier: signed_type_specifier .

    $default  reduce using rule 146 (integer_type_specifier)


state 28

  148 integer_type_specifier: character_type_specifier .

    $default  reduce using rule 148 (integer_type_specifier)


state 29

  147 integer_type_specifier: unsigned_type_specifier .

    $default  reduce using rule 147 (integer_type_specifier)


state 30

  145 type_specifier: void_type_specifier .

    $default  reduce using rule 145 (type_specifier)


state 31

  150 signed_type_specifier: SHORT INT .

    $default  reduce using rule 150 (signed_type_specifier)


state 32

  151 signed_type_specifier: SIGNED SHORT .
  152                      | SIGNED SHORT . INT

    INT  shift, and go to state 53

    $default  reduce using rule 151 (signed_type_specifier)


state 33

  161 character_type_specifier: SIGNED CHAR .

    $default  reduce using rule 161 (character_type_specifier)


state 34

  154 signed_type_specifier: SIGNED INT .

    $default  reduce using rule 154 (signed_type_specifier)


state 35

  158 signed_type_specifier: SIGNED LONG .
  159                      | SIGNED LONG . INT

    INT  shift, and go to state 54

    $default  reduce using rule 158 (signed_type_specifier)


state 36

  199 unsigned_type_specifier: UNSIGNED SHORT . INT

    INT  shift, and go to state 55


state 37

  162 character_type_specifier: UNSIGNED CHAR .

    $default  reduce using rule 162 (character_type_specifier)


state 38

  200 unsigned_type_specifier: UNSIGNED INT .

    $default  reduce using rule 200 (unsigned_type_specifier)


state 39

  201 unsigned_type_specifier: UNSIGNED LONG . INT

    INT  shift, and go to state 56


state 40

  157 signed_type_specifier: LONG INT .

    $default  reduce using rule 157 (signed_type_specifier)


state 41

   64 direct_declarator: LEFT_PAREN declarator . RIGHT_PAREN

    RIGHT_PAREN  shift, and go to state 57


state 42

   61 pointer: STAR pointer .

    $default  reduce using rule 61 (pointer)


state 43

    0 $accept: root $end .

    $default  accept


state 44

    3 translation_unit: translation_unit top_level_decl .

    $default  reduce using rule 3 (translation_unit)


state 45

    8 compound_statement: LEFT_CURLY_BRACE . declaration_or_statement_list RIGHT_CURLY_BRACE
    9                   | LEFT_CURLY_BRACE . RIGHT_CURLY_BRACE

    error               shift, and go to state 58
    DO                  shift, and go to state 59
    FOR                 shift, and go to state 60
    RETURN              shift, and go to state 61
    BREAK               shift, and go to state 62
    SHORT               shift, and go to state 1
    GOTO                shift, and go to state 63
    SIGNED              shift, and go to state 2
    UNSIGNED            shift, and go to state 3
    CHAR                shift, and go to state 4
    IF                  shift, and go to state 64
    VOID                shift, and go to state 5
    INT                 shift, and go to state 6
    CONTINUE            shift, and go to state 65
    LONG                shift, and go to state 7
    WHILE               shift, and go to state 66
    IDENTIFIER          shift, and go to state 67
    STRING_CONST        shift, and go to state 68
    INTEGER_CONST       shift, and go to state 69
    LEFT_CURLY_BRACE    shift, and go to state 45
    RIGHT_CURLY_BRACE   shift, and go to state 70
    SEMICOLON           shift, and go to state 71
    LEFT_PAREN          shift, and go to state 72
    INCREMENT           shift, and go to state 73
    DECREMENT           shift, and go to state 74
    BITWISE_COMPLEMENT  shift, and go to state 75
    LOGICAL_NOT         shift, and go to state 76
    PLUS                shift, and go to state 77
    DASH                shift, and go to state 78
    AMPERSAND           shift, and go to state 79
    STAR                shift, and go to state 80

    decl                           go to state 81
    compound_statement             go to state 82
    declaration_or_statement_list  go to state 83
    declaration_or_statement       go to state 84
    statement                      go to state 85
    labeled_statement              go to state 86
    expression_statement           go to state 87
    conditional_statement          go to state 88
    iterative_statement            go to state 89
    break_statement                go to state 90
    continue_statement             go to state 91
    return_statement               go to state 92
    goto_statement                 go to state 93
    named_label                    go to state 94
    null_statement                 go to state 95
    label                          go to state 96
    if_else_statement              go to state 97
    if_statement                   go to state 98
    while_statement                go to state 99
    do_statement                   go to state 100
    for_statement                  go to state 101
    expr                           go to state 102
    comma_expr                     go to state 103
    assignment_expr                go to state 104
    conditional_expr               go to state 105
    logical_or_expr                go to state 106
    logical_and_expr               go to state 107
    bitwise_and_expr               go to state 108
    equality_expr                  go to state 109
    relational_expr                go to state 110
    shift_expr                     go to state 111
    additive_expr                  go to state 112
    multiplicative_expr            go to state 113
    cast_expr                      go to state 114
    declaration_specifiers         go to state 115
    type_specifier                 go to state 25
    integer_type_specifier         go to state 26
    signed_type_specifier          go to state 27
    character_type_specifier       go to state 28
    bitwise_or_expr                go to state 116
    bitwise_xor_expr               go to state 117
    unary_expr                     go to state 118
    unary_minus_expr               go to state 119
    unary_plus_expr                go to state 120
    logical_negation_expr          go to state 121
    bitwise_negation_expr          go to state 122
    address_expr                   go to state 123
    indirection_expr               go to state 124
    postfix_expr                   go to state 125
    primary_expr                   go to state 126
    parenthesized_expr             go to state 127
    subscript_expr                 go to state 128
    predecrement_expr              go to state 129
    preincrement_expr              go to state 130
    function_call                  go to state 131
    postdecrement_expr             go to state 132
    postincrement_expr             go to state 133
    unsigned_type_specifier        go to state 29
    void_type_specifier            go to state 30


state 46

    7 function_definition: function_def_specifier compound_statement .

    $default  reduce using rule 7 (function_definition)


state 47

   62 pointer_decl: pointer direct_declarator .
   68 function_declarator: direct_declarator . LEFT_PAREN parameter_type_list RIGHT_PAREN
   86 array_declarator: direct_declarator . LEFT_BRACKET constant_expr RIGHT_BRACKET
   87                 | direct_declarator . LEFT_BRACKET RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 48
    LEFT_PAREN    shift, and go to state 49

    $default  reduce using rule 62 (pointer_decl)


state 48

   86 array_declarator: direct_declarator LEFT_BRACKET . constant_expr RIGHT_BRACKET
   87                 | direct_declarator LEFT_BRACKET . RIGHT_BRACKET

    IDENTIFIER          shift, and go to state 134
    STRING_CONST        shift, and go to state 68
    INTEGER_CONST       shift, and go to state 69
    RIGHT_BRACKET       shift, and go to state 135
    LEFT_PAREN          shift, and go to state 72
    INCREMENT           shift, and go to state 73
    DECREMENT           shift, and go to state 74
    BITWISE_COMPLEMENT  shift, and go to state 75
    LOGICAL_NOT         shift, and go to state 76
    PLUS                shift, and go to state 77
    DASH                shift, and go to state 78
    AMPERSAND           shift, and go to state 79
    STAR                shift, and go to state 80

    constant_expr          go to state 136
    conditional_expr       go to state 137
    logical_or_expr        go to state 106
    logical_and_expr       go to state 107
    bitwise_and_expr       go to state 108
    equality_expr          go to state 109
    relational_expr        go to state 110
    shift_expr             go to state 111
    additive_expr          go to state 112
    multiplicative_expr    go to state 113
    cast_expr              go to state 114
    bitwise_or_expr        go to state 116
    bitwise_xor_expr       go to state 117
    unary_expr             go to state 138
    unary_minus_expr       go to state 119
    unary_plus_expr        go to state 120
    logical_negation_expr  go to state 121
    bitwise_negation_expr  go to state 122
    address_expr           go to state 123
    indirection_expr       go to state 124
    postfix_expr           go to state 125
    primary_expr           go to state 126
    parenthesized_expr     go to state 127
    subscript_expr         go to state 128
    predecrement_expr      go to state 129
    preincrement_expr      go to state 130
    function_call          go to state 131
    postdecrement_expr     go to state 132
    postincrement_expr     go to state 133


state 49

   68 function_declarator: direct_declarator LEFT_PAREN . parameter_type_list RIGHT_PAREN

    SHORT     shift, and go to state 1
    SIGNED    shift, and go to state 2
    UNSIGNED  shift, and go to state 3
    CHAR      shift, and go to state 4
    VOID      shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7

    parameter_decl            go to state 139
    parameter_list            go to state 140
    parameter_type_list       go to state 141
    declaration_specifiers    go to state 142
    type_specifier            go to state 25
    integer_type_specifier    go to state 26
    signed_type_specifier     go to state 27
    character_type_specifier  go to state 28
    unsigned_type_specifier   go to state 29
    void_type_specifier       go to state 30


state 50

   88 initialized_declarator_list: initialized_declarator .

    $default  reduce using rule 88 (initialized_declarator_list)


state 51

   55 function_def_specifier: declaration_specifiers declarator .
   57 initialized_declarator: declarator .
